force-app/main/default/objects/External_Service_Params__mdt/External_Service_Params__mdt.object-meta.xml
<CustomObject>
    <description>PGP-0009 : Create Custom Metadata to store all Param for each services</description>
    <label>External Service Params</label>
    <pluralLabel>External Service Params</pluralLabel>
</CustomObject>