force-app/main/default/objects/External_Service_Params__mdt/fields/Is_Required_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_Encoding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PGP-0009 : Value should be encoded if this field value if True</description>
    <label>Is Required Encoding</label>
    <type>Checkbox</type>
</CustomField>