force-app/main/default/objects/External_Service_Params__mdt/fields/Key_Value_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Key_Value_Prefix__c</fullName>
    <description>PGP-0009 : Stores key value prefix. Ex : Add Basic&quot; in Authorization header</description>
    <label>Key Value Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>