force-app/main/default/objects/External_Service_Params__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PGP-0009 : Store types of each request</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endpoint</fullName>
                <default>true</default>
                <label>Endpoint</label>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Method</fullName>
            </value>
            <value>
                <fullName>Param</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>