force-app/main/default/objects/External_Service_Params__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>PGP-0009 : Store value of keys</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>